--- a/Project/Renderer/Renderer.vcxproj.filters
+++ b/Project/Renderer/Renderer.vcxproj.filters
@@ -15,8 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Main.c">
+    <ClCompile Include="Source\application.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\display.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\display.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
