--- a/Project/Renderer/Renderer.vcxproj.filters
+++ b/Project/Renderer/Renderer.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="Source\vector.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\mesh.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\triangle.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\display.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\vector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\triangle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
