--- a/Project/Renderer/Renderer.vcxproj.filters
+++ b/Project/Renderer/Renderer.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Source\triangle.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\obj.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\display.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\triangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\obj.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
