--- a/Project/Renderer/Renderer.vcxproj.filters
+++ b/Project/Renderer/Renderer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Source\obj.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\matrix.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\display.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\obj.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
