[Renderer] Flat Shading With Global Light

--- a/Project/Renderer/Renderer.vcxproj
+++ b/Project/Renderer/Renderer.vcxproj
@@ -98,6 +98,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\light.c" />
     <ClCompile Include="Source\matrix.c" />
     <ClCompile Include="Source\mesh.c" />
     <ClCompile Include="Source\application.c" />
@@ -107,6 +108,7 @@
     <ClCompile Include="Source\triangle.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\light.h" />
     <ClInclude Include="Source\matrix.h" />
     <ClInclude Include="Source\obj.h" />
     <ClInclude Include="Source\mesh.h" />
